# african-recipes-api

./: .env.example  .flake8  .gitignore  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  composer.json  docker-compose.yml  laravel  pyproject.toml
.github/: code_checks.yml
.github/workflows/: app_tests.yml  style_checks.yml
alembic/: env.py
alembic/versions/: 0763ee4b7314_change_recipe_id_type_to_string.py  22a4b9b3a2ca_change_recipe_id_type_to_string.py  3252bafff0b0_create_recipes_db_and_recipes_table.py  643184784d8c_add_new_model_definitions.py  969a5b9b30fb_update_recipes_table_with_image_file_.py  c369dc1fd7dd_update_user_and_image_relationship_and_.py  c40b688fcab8_add_new_model_definitions.py  e0590c32187f_update_recipes_table_with_calories_.py  efebe2175d4f_added_images_table.py
app/: config.py  constants.py  db.py  models.py  routes.py  schemas.py  utils.py
app/Models/: Comment.php  Newsletter.php  Rating.php  Recipe.php  Subscriber.php  Tag.php  User.php
app/db/: base_class.py  db.py
app/serializers/: recipe.py
config/: database.php
database/migrations/: 2024_03_22_141624_create_recipes_table.php  2024_03_22_143927_create_newsletters_table.php  2024_03_22_143931_create_subscribers_table.php  2024_03_22_144403_create_ratings_table.php  2024_03_22_150000_likes.php  2024_03_22_150807_create_tags_table.php  2024_03_22_150952_recipe_tag_assignment.php  2024_03_23_135806_create_collaborators_table.php  2024_03_26_075858_create_comments_table.php  (+1 more)
routes/: web.php
scripts/: lint.sh
tests/: create-testing-database.sql
(+14 files in other folders)
