[tool.poetry]
name = "recipes-api"
version = "0.1.0"
description = ""
authors = ["Agatha Bahati <agatha@marketforce.com>"]
readme = "README.md"
packages = [{include = "recipes_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^2.0.12"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
alembic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
autoflake = "^2.1.1"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py37', 'py38']
include = '''
(
    ^/app/
)
'''
exclude = '''
(
    __pycache__
    | .pytest_cache
    | .gitignore  
    | ^.*.mako
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
